yoshimi 1.7.0 M

2020-3-17 Will
* Implemented Modulation PolyAT.

2020-3-15 Will
* Created GUI for PolyAT.
  Can't yet run two effects at the same time.
* PolyAT saved in patch sets.
* Temporarly hid PolyAT negative filter cutoff.
  It doesn't work at all well :(
* Both PolyAT effect can now be run together.

2020-3-12 Will
* Small refinements to PolyAT.

2020-3-10 Will
* Merged in first trial of PolyAT.
  Currently fixed as filter cutoff.
* Corrected Mixer channel colours for Solo.
* PolyAT can do lowering as well as raising filter cutoff.
* Defined some PolyAT types in globals.h

2020-3-7 Will
* Installed full placeholder for key pressure detection.
* Provided emulator for key pressure in MusicIO.cpp.

2020-3-6 Will
* Patched in additional Solo type 'Channel' from Matthew.
  Made a few minor corrections.
* Applied some optimisations to Solo Channel mode.
* Updated docs.

2020-3-4 Will
* Revised Solo switch selection for performance and clarity.

2020-3-3 Will
* Merged in various fixes from Iain.
* BugFix: not closing directories after use :(
* Revised file/directory copying.
  Options are now: always write, only missing, only newer

2020-3-1 Will
* Improved code for spacing new bank IDs.
* BugFix: LV2 not updating MIDI-learn GUI.
  Reinstated original window control, but now with
  correct action being set!

2020-2-17 Will
* Implemented Hyperbolic Secant Waveform option.
* Converted waveshape numbers to labels.
* Adjusted some CLI text.

2020-2-14 Will
* If no banks are found at startup a new one is generated.
  This will be in the .local directory and will contain one
  subsynth instrument.

2020-2-13 Will
* BugFix: MIDI-learn crash if accessing non-exisitent effect.
  This need more work to correctly report to the CLI.
* Suppressed test message in filterUI.
* Updated docs.

2020-2-11 Will
* Corrected MIDI-Learn save title bar.
* New bank structure almost complete.
  There is a workround for an anomaly where
  startup seems to create phantom empty banks.
